--- a/import_merge_csv.ipynb
+++ b/import_merge_csv.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -191,7 +191,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 1816 columns</p>\n",
+       "<p>5 rows × 1812 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -216,24 +216,27 @@
        "3     NaN      3.0     3.0     3.0  \n",
        "4    60.0      NaN     NaN     NaN  \n",
        "\n",
-       "[5 rows x 1816 columns]"
+       "[5 rows x 1812 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#Merge all datasets\n",
-    "nahnes_merged_dataset = pd.concat([labs,examination,demographic,diet,questionnaire], on=\"\", axis=1)\n",
+    "df1 = pd.merge(labs, examination, how=\"left\", on=\"SEQN\")\n",
+    "df2 = pd.merge(df1, demographic, how=\"left\", on=\"SEQN\")\n",
+    "df3 = pd.merge(df2, diet, how=\"left\", on=\"SEQN\")\n",
+    "nahnes_merged_dataset = pd.merge(df3, questionnaire, how=\"left\", on=\"SEQN\")\n",
     "\n",
     "nahnes_merged_dataset.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -391,7 +394,7 @@
        "4   52.0  162.4      1.0   136.0    85.0     NaN     NaN  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
