renamed dataframe columns

--- a/import_merge_csv.ipynb
+++ b/import_merge_csv.ipynb
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -261,10 +261,6 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>SEQN</th>\n",
-       "      <th>SEQN</th>\n",
-       "      <th>SEQN</th>\n",
-       "      <th>SEQN</th>\n",
-       "      <th>SEQN</th>\n",
        "      <th>RIAGENDR</th>\n",
        "      <th>RIDAGEYR</th>\n",
        "      <th>DR1TCAFF</th>\n",
@@ -282,10 +278,6 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>73557</td>\n",
-       "      <td>73557</td>\n",
-       "      <td>73557</td>\n",
-       "      <td>73557</td>\n",
-       "      <td>73557</td>\n",
        "      <td>1</td>\n",
        "      <td>69</td>\n",
        "      <td>203.0</td>\n",
@@ -300,10 +292,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>73558</td>\n",
-       "      <td>73558</td>\n",
-       "      <td>73558</td>\n",
-       "      <td>73558</td>\n",
        "      <td>73558</td>\n",
        "      <td>1</td>\n",
        "      <td>54</td>\n",
@@ -320,10 +308,6 @@
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>73559</td>\n",
-       "      <td>73559</td>\n",
-       "      <td>73559</td>\n",
-       "      <td>73559</td>\n",
-       "      <td>73559</td>\n",
        "      <td>1</td>\n",
        "      <td>72</td>\n",
        "      <td>45.0</td>\n",
@@ -339,10 +323,6 @@
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>73560</td>\n",
-       "      <td>73560</td>\n",
-       "      <td>73560</td>\n",
-       "      <td>73560</td>\n",
-       "      <td>73560</td>\n",
        "      <td>1</td>\n",
        "      <td>9</td>\n",
        "      <td>0.0</td>\n",
@@ -357,10 +337,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>73561</td>\n",
-       "      <td>73561</td>\n",
-       "      <td>73561</td>\n",
-       "      <td>73561</td>\n",
        "      <td>73561</td>\n",
        "      <td>2</td>\n",
        "      <td>73</td>\n",
@@ -379,22 +355,22 @@
        "</div>"
       ],
       "text/plain": [
-       "    SEQN   SEQN   SEQN   SEQN   SEQN  RIAGENDR  RIDAGEYR  DR1TCAFF  DR1TALCO  \\\n",
-       "0  73557  73557  73557  73557  73557         1        69     203.0       0.0   \n",
-       "1  73558  73558  73558  73558  73558         1        54     240.0     119.0   \n",
-       "2  73559  73559  73559  73559  73559         1        72      45.0       0.0   \n",
-       "3  73560  73560  73560  73560  73560         1         9       0.0       0.0   \n",
-       "4  73561  73561  73561  73561  73561         2        73      24.0       0.0   \n",
+       "    SEQN  RIAGENDR  RIDAGEYR  DR1TCAFF  DR1TALCO  BMXWT  BMXHT  BPXPULS  \\\n",
+       "0  73557         1        69     203.0       0.0   78.3  171.3      1.0   \n",
+       "1  73558         1        54     240.0     119.0   89.5  176.8      1.0   \n",
+       "2  73559         1        72      45.0       0.0   88.9  175.3      1.0   \n",
+       "3  73560         1         9       0.0       0.0   32.2  137.3      1.0   \n",
+       "4  73561         2        73      24.0       0.0   52.0  162.4      1.0   \n",
        "\n",
-       "   BMXWT  BMXHT  BPXPULS  BPXSY1  LBDHDD  ALQ130  SMQ040  \n",
-       "0   78.3  171.3      1.0   122.0    65.0     1.0     3.0  \n",
-       "1   89.5  176.8      1.0   156.0    50.0     4.0     2.0  \n",
-       "2   88.9  175.3      1.0   140.0    60.0     NaN     3.0  \n",
-       "3   32.2  137.3      1.0   108.0    61.0     NaN     NaN  \n",
-       "4   52.0  162.4      1.0   136.0    85.0     NaN     NaN  "
+       "   BPXSY1  LBDHDD  ALQ130  SMQ040  \n",
+       "0   122.0    65.0     1.0     3.0  \n",
+       "1   156.0    50.0     4.0     2.0  \n",
+       "2   140.0    60.0     NaN     3.0  \n",
+       "3   108.0    61.0     NaN     NaN  \n",
+       "4   136.0    85.0     NaN     NaN  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -405,6 +381,180 @@
     "                                              'BPXPULS','BPXSY1', 'LBDHDD', 'ALQ130', 'SMQ040']]\n",
     "\n",
     "nahnes_dataset.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ID</th>\n",
+       "      <th>Gender</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Caffeine (mg)</th>\n",
+       "      <th>Alcohol (gm)</th>\n",
+       "      <th>Weight (kg)</th>\n",
+       "      <th>Standing Height (cm)</th>\n",
+       "      <th>Pulse regular or irregular?</th>\n",
+       "      <th>Systolic: Blood pressure mm Hg</th>\n",
+       "      <th>Direct HDL-Cholesterol (mg/dL)</th>\n",
+       "      <th>Avg Drinks per Day</th>\n",
+       "      <th>Smoker?</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>73557</td>\n",
+       "      <td>1</td>\n",
+       "      <td>69</td>\n",
+       "      <td>203.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>78.3</td>\n",
+       "      <td>171.3</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>122.0</td>\n",
+       "      <td>65.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>3.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>73558</td>\n",
+       "      <td>1</td>\n",
+       "      <td>54</td>\n",
+       "      <td>240.0</td>\n",
+       "      <td>119.0</td>\n",
+       "      <td>89.5</td>\n",
+       "      <td>176.8</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>156.0</td>\n",
+       "      <td>50.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>2.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>73559</td>\n",
+       "      <td>1</td>\n",
+       "      <td>72</td>\n",
+       "      <td>45.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>88.9</td>\n",
+       "      <td>175.3</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>140.0</td>\n",
+       "      <td>60.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>3.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>73560</td>\n",
+       "      <td>1</td>\n",
+       "      <td>9</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>32.2</td>\n",
+       "      <td>137.3</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>108.0</td>\n",
+       "      <td>61.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>73561</td>\n",
+       "      <td>2</td>\n",
+       "      <td>73</td>\n",
+       "      <td>24.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>52.0</td>\n",
+       "      <td>162.4</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>136.0</td>\n",
+       "      <td>85.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      ID  Gender  Age  Caffeine (mg)  Alcohol (gm)  Weight (kg)  \\\n",
+       "0  73557       1   69          203.0           0.0         78.3   \n",
+       "1  73558       1   54          240.0         119.0         89.5   \n",
+       "2  73559       1   72           45.0           0.0         88.9   \n",
+       "3  73560       1    9            0.0           0.0         32.2   \n",
+       "4  73561       2   73           24.0           0.0         52.0   \n",
+       "\n",
+       "   Standing Height (cm)  Pulse regular or irregular?  \\\n",
+       "0                 171.3                          1.0   \n",
+       "1                 176.8                          1.0   \n",
+       "2                 175.3                          1.0   \n",
+       "3                 137.3                          1.0   \n",
+       "4                 162.4                          1.0   \n",
+       "\n",
+       "   Systolic: Blood pressure mm Hg  Direct HDL-Cholesterol (mg/dL)  \\\n",
+       "0                           122.0                            65.0   \n",
+       "1                           156.0                            50.0   \n",
+       "2                           140.0                            60.0   \n",
+       "3                           108.0                            61.0   \n",
+       "4                           136.0                            85.0   \n",
+       "\n",
+       "   Avg Drinks per Day  Smoker?  \n",
+       "0                 1.0      3.0  \n",
+       "1                 4.0      2.0  \n",
+       "2                 NaN      3.0  \n",
+       "3                 NaN      NaN  \n",
+       "4                 NaN      NaN  "
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Rename columns\n",
+    "nahnes_renamed = nahnes_dataset.rename(columns={'SEQN':'ID',\n",
+    "                                      'RIAGENDR':'Gender',\n",
+    "                                      'RIDAGEYR':'Age',\n",
+    "                                      'DR1TCAFF':'Caffeine (mg)',\n",
+    "                                      'DR1TALCO':'Alcohol (gm)',\n",
+    "                                      'BMXWT':'Weight (kg)',\n",
+    "                                      'BMXHT':'Standing Height (cm)',\n",
+    "                                      'BPXPULS':'Pulse regular or irregular?',\n",
+    "                                      'BPXSY1':'Systolic: Blood pressure mm Hg',\n",
+    "                                      'LBDHDD': 'Direct HDL-Cholesterol (mg/dL)',\n",
+    "                                      'ALQ130':'Avg Drinks per Day',\n",
+    "                                      'SMQ040':'Smoker?'\n",
+    "                                      })\n",
+    "\n",
+    "nahnes_renamed.head()"
    ]
   },
   {
