dropped any NA value rows

--- a/import_merge_csv.ipynb
+++ b/import_merge_csv.ipynb
@@ -559,6 +559,448 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ID</th>\n",
+       "      <th>Gender</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Caffeine (mg)</th>\n",
+       "      <th>Alcohol (gm)</th>\n",
+       "      <th>Weight (kg)</th>\n",
+       "      <th>Standing Height (cm)</th>\n",
+       "      <th>Pulse regular or irregular?</th>\n",
+       "      <th>Systolic: Blood pressure mm Hg</th>\n",
+       "      <th>Direct HDL-Cholesterol (mg/dL)</th>\n",
+       "      <th>Avg Drinks per Day</th>\n",
+       "      <th>Smoker?</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>9813.000000</td>\n",
+       "      <td>9813.000000</td>\n",
+       "      <td>9813.000000</td>\n",
+       "      <td>8531.000000</td>\n",
+       "      <td>8531.000000</td>\n",
+       "      <td>9723.000000</td>\n",
+       "      <td>9067.000000</td>\n",
+       "      <td>9511.000000</td>\n",
+       "      <td>7172.000000</td>\n",
+       "      <td>7624.000000</td>\n",
+       "      <td>3596.000000</td>\n",
+       "      <td>2490.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>78644.559971</td>\n",
+       "      <td>1.507694</td>\n",
+       "      <td>31.629573</td>\n",
+       "      <td>93.338999</td>\n",
+       "      <td>6.092814</td>\n",
+       "      <td>62.599054</td>\n",
+       "      <td>155.883759</td>\n",
+       "      <td>1.013668</td>\n",
+       "      <td>118.123536</td>\n",
+       "      <td>53.105194</td>\n",
+       "      <td>3.511123</td>\n",
+       "      <td>2.143373</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>2938.592266</td>\n",
+       "      <td>0.499966</td>\n",
+       "      <td>24.397553</td>\n",
+       "      <td>157.170984</td>\n",
+       "      <td>22.535972</td>\n",
+       "      <td>32.331616</td>\n",
+       "      <td>23.176270</td>\n",
+       "      <td>0.116116</td>\n",
+       "      <td>18.078149</td>\n",
+       "      <td>15.230838</td>\n",
+       "      <td>28.866122</td>\n",
+       "      <td>0.941396</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>73557.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>3.100000</td>\n",
+       "      <td>79.700000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>66.000000</td>\n",
+       "      <td>10.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>76092.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>10.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>37.950000</td>\n",
+       "      <td>149.500000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>106.000000</td>\n",
+       "      <td>42.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>78643.000000</td>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>27.000000</td>\n",
+       "      <td>25.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>65.300000</td>\n",
+       "      <td>162.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>116.000000</td>\n",
+       "      <td>51.000000</td>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>3.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>81191.000000</td>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>52.000000</td>\n",
+       "      <td>130.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>83.500000</td>\n",
+       "      <td>171.050000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>128.000000</td>\n",
+       "      <td>61.000000</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>3.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>83731.000000</td>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>80.000000</td>\n",
+       "      <td>2448.000000</td>\n",
+       "      <td>591.400000</td>\n",
+       "      <td>222.600000</td>\n",
+       "      <td>202.600000</td>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>228.000000</td>\n",
+       "      <td>173.000000</td>\n",
+       "      <td>999.000000</td>\n",
+       "      <td>3.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                 ID       Gender          Age  Caffeine (mg)  Alcohol (gm)  \\\n",
+       "count   9813.000000  9813.000000  9813.000000    8531.000000   8531.000000   \n",
+       "mean   78644.559971     1.507694    31.629573      93.338999      6.092814   \n",
+       "std     2938.592266     0.499966    24.397553     157.170984     22.535972   \n",
+       "min    73557.000000     1.000000     0.000000       0.000000      0.000000   \n",
+       "25%    76092.000000     1.000000    10.000000       0.000000      0.000000   \n",
+       "50%    78643.000000     2.000000    27.000000      25.000000      0.000000   \n",
+       "75%    81191.000000     2.000000    52.000000     130.000000      0.000000   \n",
+       "max    83731.000000     2.000000    80.000000    2448.000000    591.400000   \n",
+       "\n",
+       "       Weight (kg)  Standing Height (cm)  Pulse regular or irregular?  \\\n",
+       "count  9723.000000           9067.000000                  9511.000000   \n",
+       "mean     62.599054            155.883759                     1.013668   \n",
+       "std      32.331616             23.176270                     0.116116   \n",
+       "min       3.100000             79.700000                     1.000000   \n",
+       "25%      37.950000            149.500000                     1.000000   \n",
+       "50%      65.300000            162.000000                     1.000000   \n",
+       "75%      83.500000            171.050000                     1.000000   \n",
+       "max     222.600000            202.600000                     2.000000   \n",
+       "\n",
+       "       Systolic: Blood pressure mm Hg  Direct HDL-Cholesterol (mg/dL)  \\\n",
+       "count                     7172.000000                     7624.000000   \n",
+       "mean                       118.123536                       53.105194   \n",
+       "std                         18.078149                       15.230838   \n",
+       "min                         66.000000                       10.000000   \n",
+       "25%                        106.000000                       42.000000   \n",
+       "50%                        116.000000                       51.000000   \n",
+       "75%                        128.000000                       61.000000   \n",
+       "max                        228.000000                      173.000000   \n",
+       "\n",
+       "       Avg Drinks per Day      Smoker?  \n",
+       "count         3596.000000  2490.000000  \n",
+       "mean             3.511123     2.143373  \n",
+       "std             28.866122     0.941396  \n",
+       "min              1.000000     1.000000  \n",
+       "25%              1.000000     1.000000  \n",
+       "50%              2.000000     3.000000  \n",
+       "75%              3.000000     3.000000  \n",
+       "max            999.000000     3.000000  "
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nahnes_renamed.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#drop all NA values\n",
+    "nahnes_na = nahnes_renamed.dropna(axis=0, how='any')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ID</th>\n",
+       "      <th>Gender</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Caffeine (mg)</th>\n",
+       "      <th>Alcohol (gm)</th>\n",
+       "      <th>Weight (kg)</th>\n",
+       "      <th>Standing Height (cm)</th>\n",
+       "      <th>Pulse regular or irregular?</th>\n",
+       "      <th>Systolic: Blood pressure mm Hg</th>\n",
+       "      <th>Direct HDL-Cholesterol (mg/dL)</th>\n",
+       "      <th>Avg Drinks per Day</th>\n",
+       "      <th>Smoker?</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>1422.000000</td>\n",
+       "      <td>1422.000000</td>\n",
+       "      <td>1422.000000</td>\n",
+       "      <td>1422.000000</td>\n",
+       "      <td>1422.000000</td>\n",
+       "      <td>1422.000000</td>\n",
+       "      <td>1422.000000</td>\n",
+       "      <td>1422.000000</td>\n",
+       "      <td>1422.000000</td>\n",
+       "      <td>1422.000000</td>\n",
+       "      <td>1422.000000</td>\n",
+       "      <td>1422.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>78599.497890</td>\n",
+       "      <td>1.421941</td>\n",
+       "      <td>47.350914</td>\n",
+       "      <td>189.922644</td>\n",
+       "      <td>19.078551</td>\n",
+       "      <td>82.703586</td>\n",
+       "      <td>169.404712</td>\n",
+       "      <td>1.021800</td>\n",
+       "      <td>122.644163</td>\n",
+       "      <td>52.229958</td>\n",
+       "      <td>3.890295</td>\n",
+       "      <td>2.111814</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>2914.190606</td>\n",
+       "      <td>0.494043</td>\n",
+       "      <td>17.104100</td>\n",
+       "      <td>220.790429</td>\n",
+       "      <td>41.563626</td>\n",
+       "      <td>20.935085</td>\n",
+       "      <td>9.459327</td>\n",
+       "      <td>0.146082</td>\n",
+       "      <td>17.344827</td>\n",
+       "      <td>16.828267</td>\n",
+       "      <td>26.555836</td>\n",
+       "      <td>0.939860</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>73557.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>18.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>42.200000</td>\n",
+       "      <td>142.500000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>66.000000</td>\n",
+       "      <td>10.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>76168.500000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>33.000000</td>\n",
+       "      <td>43.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>68.200000</td>\n",
+       "      <td>162.600000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>112.000000</td>\n",
+       "      <td>40.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>78530.500000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>47.000000</td>\n",
+       "      <td>144.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>79.700000</td>\n",
+       "      <td>169.500000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>120.000000</td>\n",
+       "      <td>49.000000</td>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>3.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>81075.750000</td>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>62.000000</td>\n",
+       "      <td>258.000000</td>\n",
+       "      <td>22.400000</td>\n",
+       "      <td>94.000000</td>\n",
+       "      <td>176.100000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>132.000000</td>\n",
+       "      <td>60.750000</td>\n",
+       "      <td>4.000000</td>\n",
+       "      <td>3.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>83703.000000</td>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>80.000000</td>\n",
+       "      <td>2448.000000</td>\n",
+       "      <td>591.400000</td>\n",
+       "      <td>187.800000</td>\n",
+       "      <td>198.200000</td>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>220.000000</td>\n",
+       "      <td>173.000000</td>\n",
+       "      <td>999.000000</td>\n",
+       "      <td>3.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                 ID       Gender          Age  Caffeine (mg)  Alcohol (gm)  \\\n",
+       "count   1422.000000  1422.000000  1422.000000    1422.000000   1422.000000   \n",
+       "mean   78599.497890     1.421941    47.350914     189.922644     19.078551   \n",
+       "std     2914.190606     0.494043    17.104100     220.790429     41.563626   \n",
+       "min    73557.000000     1.000000    18.000000       0.000000      0.000000   \n",
+       "25%    76168.500000     1.000000    33.000000      43.000000      0.000000   \n",
+       "50%    78530.500000     1.000000    47.000000     144.000000      0.000000   \n",
+       "75%    81075.750000     2.000000    62.000000     258.000000     22.400000   \n",
+       "max    83703.000000     2.000000    80.000000    2448.000000    591.400000   \n",
+       "\n",
+       "       Weight (kg)  Standing Height (cm)  Pulse regular or irregular?  \\\n",
+       "count  1422.000000           1422.000000                  1422.000000   \n",
+       "mean     82.703586            169.404712                     1.021800   \n",
+       "std      20.935085              9.459327                     0.146082   \n",
+       "min      42.200000            142.500000                     1.000000   \n",
+       "25%      68.200000            162.600000                     1.000000   \n",
+       "50%      79.700000            169.500000                     1.000000   \n",
+       "75%      94.000000            176.100000                     1.000000   \n",
+       "max     187.800000            198.200000                     2.000000   \n",
+       "\n",
+       "       Systolic: Blood pressure mm Hg  Direct HDL-Cholesterol (mg/dL)  \\\n",
+       "count                     1422.000000                     1422.000000   \n",
+       "mean                       122.644163                       52.229958   \n",
+       "std                         17.344827                       16.828267   \n",
+       "min                         66.000000                       10.000000   \n",
+       "25%                        112.000000                       40.000000   \n",
+       "50%                        120.000000                       49.000000   \n",
+       "75%                        132.000000                       60.750000   \n",
+       "max                        220.000000                      173.000000   \n",
+       "\n",
+       "       Avg Drinks per Day      Smoker?  \n",
+       "count         1422.000000  1422.000000  \n",
+       "mean             3.890295     2.111814  \n",
+       "std             26.555836     0.939860  \n",
+       "min              1.000000     1.000000  \n",
+       "25%              1.000000     1.000000  \n",
+       "50%              2.000000     3.000000  \n",
+       "75%              4.000000     3.000000  \n",
+       "max            999.000000     3.000000  "
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nahnes_na.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
